Eliminated the scrollbar in the sidebar bug

--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -6756,7 +6756,7 @@ h2.title {
 
 .perfect-scrollbar-off .sidebar .sidebar-wrapper,
 .perfect-scrollbar-off .main-panel {
-    overflow: auto;
+    overflow: hidden;
 }
 
 .visible-on-sidebar-regular {
